tests/baselines/reference/defaultArgsForwardReferencing.errors.txt
==== tests/cases/compiler/defaultArgsForwardReferencing.ts (12 errors) ====
    function left(a, b = a, c = b) {
        a;
        b;
    }
    
    function right(a = b, b = a) {
                       ~
!!! defaultArgsForwardReferencing.ts(6,20): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
        a;
        b;
    }
    
    function right2(a = b, b = c, c = a) {
                        ~
!!! defaultArgsForwardReferencing.ts(11,21): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
                               ~
!!! defaultArgsForwardReferencing.ts(11,28): error TS2190: Initializer of parameter 'b' cannot reference identifier 'c' declared after it.
        a;
        b;
        c;
    }
    
    function inside(a = b) {
                        ~
!!! defaultArgsForwardReferencing.ts(17,21): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
        var b;
    }
    
    function outside() {
        var b;
        function inside(a = b) { // Still an error because b is declared inside the function
                            ~
!!! defaultArgsForwardReferencing.ts(23,25): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
            var b;
        }
    }
    
    function defaultArgFunction(a = function () { return b; }, b = 1) { }
                                                         ~
!!! defaultArgsForwardReferencing.ts(28,54): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
    function defaultArgArrow(a = () => () => b, b = 3) { }
                                             ~
!!! defaultArgsForwardReferencing.ts(29,42): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
    
    class C {
        constructor(a = b, b = 1) { }
                        ~
!!! defaultArgsForwardReferencing.ts(32,21): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
        method(a = b, b = 1) { }
                   ~
!!! defaultArgsForwardReferencing.ts(33,16): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
    }
    
    // Function expressions
    var x = (a = b, b = c, c = d) => { var d; };
                 ~
!!! defaultArgsForwardReferencing.ts(37,14): error TS2190: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
                        ~
!!! defaultArgsForwardReferencing.ts(37,21): error TS2190: Initializer of parameter 'b' cannot reference identifier 'c' declared after it.
                               ~
!!! defaultArgsForwardReferencing.ts(37,28): error TS2190: Initializer of parameter 'c' cannot reference identifier 'd' declared after it.